--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,35 @@
+/*All Globals  */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 62.5%
+}
 body,
 html {
   width: 100%;
-  height: 100%; 
+  height: 100%;
+  backface-visibility: hidden;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 hr {
   max-width: 65px;
   border-width: 3px;
-  border-color: #F05F44; 
+  border-color: #F05F44;
 }
 
 .faded {
-  color: rgba(255, 255, 255, 0.8); 
+  color: rgba(255, 255, 255, 0.8);
 }
 
 header.startup {
@@ -27,12 +40,13 @@ header.startup {
 }
 
 header.startup hr {
-  margin-top: 200px;
-  margin-bottom: 30px; 
+  margin: 3rem auto;
+
 }
 
 header.startup h1 {
-  font-size: 2rem; 
+  font-size: 4rem;
+
 }
 
 .btn {
@@ -43,7 +57,8 @@ header.startup h1 {
 }
 
 .btn-xl {
-  padding: 1rem 2rem; 
+  padding: 1rem 2rem;
+  backface-visibility: hidden;
 }
 
 .btn-primary {
@@ -56,4 +71,3 @@ header.startup h1 {
   border-width: 5px;
   cursor: pointer;
 }
-  
